# VitoUtopico.github.io

./: 404.html  index.html  mkdocs.yml  pyproject.toml
Currículo/curriculo/: index.html
Profissional/curriculo/: index.html
docs/: index.md
docs/Currículo/: curriculo.md
docs/Profissional/: curriculo.md
search/: search_index.json
