[tool.poetry]
name = "vitoutopico-github-io"
version = "0.1.0"
description = ""
authors = ["VitoUtopico <fabiovito@hotmail.com>"]
readme = "README.md"
packages = [{include = "vitoutopico"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.3.1"
mkdocs-material = "^9.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
